sms_normalizer.tt
grammar Normalizer

  rule text
    ( sms / omp / directive / comment / quoted / unquoted )* <Text>
  end

  rule omp
    "@$omp " "end "? "parallel do" [^\'\"\n]* <OMP>
  end

  rule sms
    "@" [sS] [mM] [sS] "$" [^\'\"\n]* <SMS>
  end

end
